# microindigo

./: CMakeLists.txt  README.md
core/: CMakeLists.txt
core/indigo-core/molecule/: molecule.h
main/: CMakeLists.txt  main.cpp  main.h
